--- a/custom.css
+++ b/custom.css
@@ -1,16 +1,24 @@
 body {
   text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  margin: 0 0 1em 0;
+  padding: 0;
 }
 
 img {
   vertical-align: middle;
-  max-height: 100%;
+  max-height: 80%;
 }
 
 blockquote {
   text-align: left;
   padding: 0 .5em;
   border-left: solid gray .5em;
+  border-radius: .25em;
 }
 
 s {
@@ -18,6 +26,10 @@ s {
   background-image: url("./images/strike.png");
   background-size: 100% 100%;
   background-position: 0 5px;
+}
+
+.slide {
+  padding: 2em 0 0;
 }
 
 #bocoup-related img {
