--- a/custom.css
+++ b/custom.css
@@ -20,7 +20,6 @@ a:active {
   color: black;
 }
 
-
 h1 {
   margin: 0 0 1em 0;
   padding: 0;
@@ -45,6 +44,12 @@ s {
   background-image: url("./images/strike.svg");
   background-size: 100% 100%;
   color: rgb(102, 102, 102);
+}
+
+em {
+  font-style: normal;
+  color: #CA0000;
+  text-shadow: 2px 2px black;
 }
 
 code {
