--- a/custom.css
+++ b/custom.css
@@ -13,7 +13,7 @@ a:link, a:visited {
 a:hover {
   color: white;
   background-color: #CA0000;
-  text-shadow: 1px 0 0 black;
+  text-shadow: .05em .05em 0 black;
 }
 
 a:active {
@@ -49,7 +49,7 @@ s {
 em {
   font-style: normal;
   color: #CA0000;
-  text-shadow: 2px 2px black;
+  text-shadow: .04em .04em black;
 }
 
 code {
@@ -64,6 +64,7 @@ code {
 
 .no-underline {
   text-decoration: none;
+  padding: .5em;
 }
 
 .big {
